[tool.poetry]
name = "websocket"
version = "0.1.0"
description = ""
authors = ["Ckala <agr.akyla@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "15.0"
python-dotenv = "1.0.1"
werkzeug = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
